# IT4863

./: .gitignore  README.md  author_data.json  author_data_v1.json  author_data_v2.json  author_data_v3.json  author_data_v4.json  author_data_v5.json  author_data_v6.json  author_data_v8.json  poem_part_3.json  thivien_poems_v1.json  thivien_poems_v4.json  unique_authors_full.json
bt-tren-lop/: cron_log.txt  hust_crawler_24h.py  hust_detail_spider.py  hust_rss_spider.py  ketqua_chitiet.json  ketqua_rss.json  pyproject.toml  run.sh  test.py
data-crawler/: .gitignore  app-config-template copy.yaml  app-config-template.yaml  author_data.json  author_data1.json  authors_list.json  crawl_author.py  crawl_author_list.py  poem_full_data_7.json  poem_full_data_8.json  poem_urls_list_part_1.json  poem_urls_list_part_2.json  poem_urls_list_part_3.json  poem_urls_list_part_4.json  poem_urls_list_part_5.json  poem_urls_list_part_6.json  poem_urls_list_part_7.json  poem_urls_list_part_8.json  poem_urls_list_part_9.json  pyproject.toml  thivien_author_spider.py  thivien_poems.csv  thivien_poems.json  thivien_spider.py  unique_authors.json
poem-crawler/: full_data.json  get_content.py  get_urls.py  poem_crawler.py  poem_metadata.json  poem_urls_part_1.json  poem_urls_part_10.json  poem_urls_part_11.json  poem_urls_part_12.json  poem_urls_part_13.json  poem_urls_part_14.json  poem_urls_part_15.json  poem_urls_part_16.json  poem_urls_part_17.json  poem_urls_part_18.json  poem_urls_part_2.json  poem_urls_part_3.json  poem_urls_part_4.json  poem_urls_part_5.json  poem_urls_part_6.json  poem_urls_part_7.json  test.py  (+4 more)
vietnamese-poems-search-system/: app.py  docker-compose.yaml  indexer.py  poem_crawler.py  poem_full_data.json  pyproject.toml  test.py
(+30 files in other folders)
