[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=76"]

[project]
name = "vietnamese-poems-search-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "requests==2.32.3",
  "ujson==5.10.0",
  "scrapy>=2.13.4",
  "tqdm>=4.67.1",
  "sentence-transformers>=5.2.0",
  "streamlit>=1.52.2",
  "elasticsearch==8.11.1",
  "rank-bm25>=0.2.2",
  "scikit-learn>=1.7.2",
  "numpy>=2.2.6",
]

[tool.setuptools.packages.find]
where = ["."]


[tool.ruff.lint]
select = [
  # Import sorting rules
  "I",
  # Pycodestyle rules (E, V)
  "E",
  # Tidy import rules
  "TID",
  # Perflint
  "PERF",
  # FastAPI specific rules
  "FAST",
]
ignore = [
  ### Intentionally disabled
  # module level import not at top of file
  "E402",
  # line too long
  "E501",
  # do not assign a lambda expression, use a def
  "E731",
  # incorrect-dict-iterator, flags valid Series.items usage
  "PERF102",
  # try-except-in-loop, becomes useless in Python 3.11
  "PERF203",
]

[tool.uv]
concurrent-downloads = 10 # prevents uv from consuming all the CPU by concurrently downloading packages



[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "recommended"
reportUnusedVariable = "hint"
reportUnusedImport = "hint"
reportUnusedParameter = "hint"
reportUnusedExpression = "hint"
reportMissingTypeStubs = false
autoImportCompletions = true
reportAny = false
reportExplicitAny = false
